// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Schematic's trackEvent destination action: all fields 1`] = `
Object {
  "api_key": "H%fspr!Jez(TWP",
  "body": Object {
    "company": Object {
      "testType": "H%fspr!Jez(TWP",
    },
    "event": "h%fspr!jez(twp",
    "traits": Object {
      "raw_event_name": "H%fspr!Jez(TWP",
    },
    "user": Object {
      "testType": "H%fspr!Jez(TWP",
    },
  },
  "sent_at": "2021-02-01T00:00:00.000Z",
  "type": "track",
}
`;

exports[`Testing snapshot for Schematic's trackEvent destination action: required fields 1`] = `
Object {
  "api_key": "H%fspr!Jez(TWP",
  "body": Object {
    "event": "h%fspr!jez(twp",
  },
  "sent_at": "2021-02-01T00:00:00.000Z",
  "type": "track",
}
`;
